# illogic

./: .gitignore  pyproject.toml  setup.cfg
doc/: conf.py  development.rst  index.rst  mAIrus.rst
illogic/asset_loader/: AssetLoader.py  README.md  Standin.py  main.py
illogic/common/: Prefs.py  README.md  standin_utils.py  utils.py
illogic/mAIrus/: MAIrus.py  Model.py  README.md  main.py  system_prompt.txt
illogic/nuke_scanner/: NukeScanner.py  README.md  main.py
