[option]
pacakges = find:illogic:
install_requires = 
    PySide2

[options.extras_require]
maya = 
    pymel

mAIrus =
    pymel
    shiboken2
    openai

dev = 
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts = 
    mAIrus = illogic.mAIrus.main:main
    maya = illogic.asset_loader.main:main
    nuke = illogic.nuke.main:main